Fix spacing

--- a/src/_includes/css/header.css
+++ b/src/_includes/css/header.css
@@ -46,7 +46,7 @@
 }
 
 .header__featured-items a {
-  margin-right: var(--gutter);
+  margin-right: var(--space-sm);
   padding: var(--space-xs);
   display: block;
   background-color: var(--black);
@@ -58,7 +58,7 @@
 
 @media only screen and (min-width: 768px) {
   .header__featured-items {
-    display: block;
+    display: flex;
   }
 }
 
